# Aura

./: .gitignore  LICENSE  main.py  pyproject.toml
aura/: __init__.py  bot.py  client.py  client_runner.py  db.py  misc.py  util.py  utils.py
aurora/events/member_update/: role_seperators.py
aurora/events/message/: exp_giver.py  meme_voter.py  shut_reply.py
aurora/events/ready/: ready.py
aurora/objects/: guild.py  lootbox.py  member.py
aurora/setup/: consts.py  database.py  templates.py
